templates/base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: alephp/polkajs:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway-service
spec:
  ports:
  - name: 3000-3000
    nodePort: 30080
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gateway
  type: NodePort
