templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway-service
spec:
  ports:
  - name: 3000-3000
    nodePort: 30080
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gateway
  type: NodePort
